[package]
name = "rusty-cloudflare-dns-balancer"
version = "0.1.0"
authors = ["Alexander Becker <abecker@bitflow.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.8.3"
warp = "0.3.1"
lazy_static = "1.4.0"
prometheus = "0.12.0"
cloudflare = "0.8.0"
reqwest = "0.11.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_with = "^1.7.0"
built = { version = "0.4.4", features = ["git2", "chrono", "semver"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"
oping = "0.4.0"

[build-dependencies]
built = { version = "0.4.4" }

[profile.release]
debug = false
lto = true